testsuite/tests/ghci/scripts/T19867.hs
import Control.Monad (sequence)

x = guard
